# cascade

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLIPBOARD_COMMANDS_PLAN.md  EVAN_HAHN_COMMANDS_PLAN.md  README.md  pyproject.toml  tox.ini
.github/workflows/: publish-testpypi.yaml  publish.yaml  zizmor.yaml
demos/: builtin_demo.py  cpuinfo_meminfo_fdinfo_demo.py  dashboard_demo.py  exec_demo.py  fileops_demo.py  for_loop_demo.py  history_demo.py  misc_commands_demo.py  network_demo.py  pebblesay_demo.py  shell_features_demo.py
docs/: command-tracking.md  testing-plan.md
scripts/: run_shell.py
src/pebble_shell/: __init__.py  __main__.py  shell.py
src/pebble_shell/commands/: __init__.py  _base.py  pebble_top.py
src/pebble_shell/commands/advanced_utils/: __init__.py  alphabet.py  brackettest.py  doublebrackettest.py  emoji.py  hostid.py  hoy.py  httpstatus.py  less.py  logger.py  more.py  patch.py  pidof.py  prettypath.py  pstrace.py  running.py  tee.py  test.py  uuid.py  waitfor.py  xargs.py  yes.py
src/pebble_shell/commands/builtin/: __init__.py  _base.py  alias.py  beep.py  boop.py  bzcat.py  cal.py  cd.py  cut.py  date.py  echo.py  edit.py  env.py  false.py  grep.py  hd.py  hexdump.py  history.py  id.py  info.py  jq.py  lsof.py  markdown.py  md5sum.py  mkcd.py  mkpasswd.py  mksh.py  notify.py  pebblesay.py  printenv.py  printf.py  pwd.py  rn.py  scratch.py  serveit.py  sfx.py  sha1sum.py  sha256sum.py  sha512sum.py  sleep.py  (+15 more)
src/pebble_shell/commands/clipboard/: __init__.py  copy.py  cpwd.py  pasta.py  pastas.py
src/pebble_shell/commands/compression/: __init__.py  bunzip2.py  bzip2.py  compress.py  exceptions.py  gunzip.py  gzip.py  lzma.py  tar.py  uncompress.py  unlzma.py  unzip.py
src/pebble_shell/commands/data_processing/: __init__.py  dd.py  od.py  split.py
src/pebble_shell/commands/exec_commands/: __init__.py  bb.py  catbin.py  each.py  envdir.py  exec.py  local.py  run.py  run_parts.py  shell.py  which.py
src/pebble_shell/commands/file_utils/: __init__.py  blkid.py  cksum.py  cmp.py  comm.py  dirname.py  findfs.py  lsattr.py  mktemp.py  mountpoint.py  readlink.py  realpath.py  sum.py  volname.py
src/pebble_shell/commands/filesystem_read/: __init__.py  _base.py  cat.py  diff.py  find.py  head.py  list.py  stat.py  tail.py
src/pebble_shell/commands/filesystem_write/: __init__.py  copy.py  make_dir.py  move.py  remove.py  remove_dir.py  touch.py
src/pebble_shell/utils/: __init__.py  clipboard.py  command_helpers.py  dashboard.py  emoji_lookup.py  enhanced_completer.py  error_handling.py  executor.py  file_ops.py  formatting.py  glob_utils.py  history.py  parser.py  pathutils.py  proc_reader.py  readline_support.py  table_builder.py  theme.py  theme_config.py
tests/: __init__.py  conftest.py  test_shell.py
tests/integration/: conftest.py  test_addcommand.py  test_addgroupcommand.py  test_addusercommand.py  test_aliascommand.py  test_arcommand.py  test_arpcommand.py  test_basenamecommand.py  test_beepcommand.py  test_blkidcommand.py  test_bracket_commands.py  test_bunzipcommand.py  test_bzcatcommand.py  test_bzipcommand.py  test_calcommand.py  test_catcommand.py  test_catvcommand.py  test_cdcommand.py  test_changescommand.py  test_checkcommand.py  test_checkscommand.py  test_cksumcommand.py  test_clearcommand.py  test_cmpcommand.py  test_commcommand.py  test_compresscommand.py  test_copycommand.py  test_cpiocommand.py  test_cpuinfocommand.py  test_cryptpwcommand.py  test_cutcommand.py  test_dashboardcommand.py  test_datecommand.py  test_dccommand.py  test_ddcommand.py  test_delgroupcommand.py  test_delusercommand.py  test_diffcommand.py  test_dirnamecommand.py  test_diskusagecommand.py  (+169 more)
tests/unit/: test_shell.py
tests/unit/test_commands/: __init__.py  test_bracket_test.py  test_builtin.py  test_builtin_core.py  test_double_bracket_test.py  test_exec.py  test_filesystem_read.py  test_filesystem_write.py  test_network.py  test_pebble_cli.py  test_pebble_top.py  test_system.py  test_theme_command.py  test_top_commands.py
tests/unit/test_utils/: test_command_helpers.py  test_dashboard.py  test_enhanced_completer.py  test_error_handling.py  test_executor.py  test_file_ops.py  test_formatting.py  test_glob_utils.py  test_history.py  test_parser.py  test_pathutils.py  test_proc_reader.py  test_quote_handling.py  test_readline_support.py  test_table_builder.py  test_theme.py  test_theme_config.py
(+126 files in other folders)
